# contextpacker

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  railway.toml  requirements.txt
context_packer/: __init__.py  auth.py  billing.py  cache.py  config.py  db.py  demo.py  git_utils.py  logging.py  main.py  models.py  orchestrator.py  repo_cache.py  selector.py  symbols.py
eval/: __init__.py
eval/e2e/: __init__.py  runner.py
eval/e2e/questions/: core.json  private.json  unknown_public.json
eval/retrieval/: __init__.py  runner.py
eval/retrieval/questions/tier1/: express.json  fastapi.json  flask.json  gin.json  starlette.json
eval/retrieval/questions/tier2/: blacksheep.json  databases.json  discordpy.json  emmett.json  pydantic.json  requests.json
eval/retrieval/questions/tier3/: bidbeacon.json  context-packer.json  llm-trader.json  memory-steward.json  sam-api.json
eval/shared/: __init__.py  clone.py  embeddings.py  metrics.py
static/: alternatives.html  docs.html  evaluation.html  how-it-works.html  index.html  manifest.json  robots.txt  sitemap.xml
tests/: __init__.py  conftest.py  test_benchmarks.py  test_cache.py  test_e2e.py  test_git_utils.py  test_retrieval_benchmarks.py  test_selector.py  test_symbols.py
