[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contextpacker"
version = "0.1.0"
description = "Repo-native context retrieval API for AI code tools"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "-x",  # Stop on first failure during development
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may require mocks)",
    "benchmark: Retrieval quality benchmarks (Hit@K, MRR)",
    "e2e: End-to-end tests with LLM calls",
    "slow: Tests that take more than 5 seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["context_packer"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
